# deepLearningFromScratch

./: CMakeLists.txt  LICENSE  Layer.cpp  Layer.h  Util.cpp  Util.h  UtilLayer.cpp  UtilLayer.h  predictDnn.cpp  trainDnn.cpp
Examples/FunctionApproximation/: R-0.txt  README.txt
Examples/Mnist/: R-0.txt  README.txt
